testing the process of changing a script

--- a/q_c_orbit_basic_waveform.ipynb
+++ b/q_c_orbit_basic_waveform.ipynb
@@ -11,6 +11,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test line - to see if I understand how to make changes and commit them properly to github"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
