--- a/q_c_orbit_basic_waveform.ipynb
+++ b/q_c_orbit_basic_waveform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,20 @@
     "    t = np.arange(0, int(time_until_coalescence), dt)\n",
     "    tau = int(time_until_coalescence) - t\n",
     "    #print(tau[-2:], type(tau))\n",
+    "    print(np.shape(tau))\n",
     "    \n",
     "    #3\n",
     "    f_gw = (1/np.pi)*((5/256)*(1/tau))**(3/8) * ((G*M_c)/(c**3))**(-5/8)\n",
     "    #print(type(f_gw))\n",
-    "  \n",
+    "    print(np.shape(f_gw))\n",
+    "    \n",
     "    #4\n",
     "    t_ret = t - (distance/c)\n",
+    "    print(np.shape(t_ret))\n",
     "    \n",
     "    h_plus = A*(((np.pi*f_gw)/c)**(2/3)) * (1+(np.cos(theta))**2) * 0.5 * np.cos(2*np.pi*f_gw*t_ret+2*phi)\n",
     "    h_cross = A*(((np.pi*f_gw)/c)**(2/3)) * np.cos(theta) * np.sin(2*np.pi*f_gw*t_ret+2*phi)\n",
+    "    print(np.shape(h_plus), np.shape(h_cross))\n",
     "    \n",
     "    return t, h_plus, h_cross"
    ]
@@ -141,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +153,11 @@
      "output_type": "stream",
      "text": [
       "duration (s): 377.37701303550716 (min): 6.289616883925119\n",
-      "df: 0.002649869932342463\n"
+      "df: 0.002649869932342463\n",
+      "(377000,)\n",
+      "(377000,)\n",
+      "(377000,)\n",
+      "(377000,) (377000,)\n"
      ]
     }
    ],
@@ -161,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
