created match filter py file

--- a/noise_generation_and_match_filter.ipynb
+++ b/noise_generation_and_match_filter.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "## 4.1 preparing waveform for injection (Notes)\n",
+    "## 4.1 preparing waveform for injection\n",
     "\n",
     "#Noise curve\n",
     "combined_tsc = combined_ts.copy()\n",
