--- a/DFT/Welch_method_DFT_examples.ipynb
+++ b/DFT/Welch_method_DFT_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
     "\n",
     "plt.figure(1)\n",
     "plt.plot(freqs[mask], psd[mask], label='frequency vs spectra')\n",
-    "plt.title('PSD - Frequency vs Spectra')\n",
+    "plt.title('PSD - Frequency Spectra')\n",
     "plt.xlim(0, 0.03)\n",
     "\n",
     "plt.show()"
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
