--- a/DFT/more_DFT_example.ipynb
+++ b/DFT/more_DFT_example.ipynb
@@ -146,10 +146,10 @@
     "plt.title(\"Raw FFT Values fd\")\n",
     "\n",
     "plt.figure(3)\n",
-    "plt.plot(np.real(fft_vals), label='real portion') #np.real(fft_vals) is the output normally plotted when python casts to real\n",
+    "#plt.plot(np.real(fft_vals), label='real portion') #np.real(fft_vals) is the output normally plotted when python casts to real\n",
     "plt.plot(2.0*np.abs(fft_vals/n), label='np.abs')\n",
     "#plt.plot(fft_vals, label='Raw fft not over np freqs values')\n",
-    "plt.title(\"Raw FFT not over np freq array\")\n",
+    "plt.title(\"FFT not over np freq array\")\n",
     "#plt.xlim(0, 5)\n",
     "\n",
     "#Notice how the freq spikes have amplitude matching the signal y amplitudes\n",
