--- a/Overview of GRACE-FO Gravitational Wave Search.ipynb
+++ b/Overview of GRACE-FO Gravitational Wave Search.ipynb
@@ -311,7 +311,7 @@
     "\n",
     "Now that we have our simulated GRACE-FO timeseries data we can start playing with it! Remember that our ultimate goal is to perform a matched filter on the GRACE-FO timeseries data to find hidden gravitational waves. To do that we first have to hide a simulated gravitational wave in our data to later find. \n",
     "\n",
-    "Our problem is to now simulate the gravitational waves emitted by two coalescing black holes! If you don't really know anything about gravitational waves, read the background statement below. Otherwise, we'll keep talking about the analysis. PyCBC has a great function for generating gravitational wave signals which I'll refer to as waveforms from here on out. The function, get_td_waveform uses previously developed models to generate the strain amplitude of the two gravitational waveform polarizations. The function, get_td_waveform, also lets us submit important parameters such as the masses of the black holes, their distance from us, and the time step size we want for the resulting waveform timeseries. I suggest playing with some of the parameters below to see how they affect the resulting waveform. Particularly important are the mass and distance parameters. A more complete list of parameters can be found [here](https://pycbc.org/pycbc/latest/html/pycbc.waveform.html) and another example [here](https://pycbc.org/pycbc/latest/html/waveform.html)\n",
+    "Our problem is to now simulate the gravitational waves emitted by two coalescing black holes! If you don't really know anything about gravitational waves, read the background statement below. Otherwise, we'll keep talking about the analysis. PyCBC has a great function for generating gravitational wave signals which I'll refer to as waveforms from here on out. The function, get_td_waveform uses previously developed models to generate the strain amplitude of the two gravitational waveform polarizations. The function, get_td_waveform, also lets us submit important parameters such as the masses of the black holes, their distance from us, and the time step size we want for the resulting waveform timeseries. I suggest playing with some of the parameters below to see how they affect the resulting waveform. Particularly important are the mass and distance parameters. A more complete list of parameters can be found [here](https://pycbc.org/pycbc/latest/html/pycbc.waveform.html) and another example [here](https://pycbc.org/pycbc/latest/html/waveform.html).\n",
     "\n",
     "###### Some GW Background\n",
     "\n",
@@ -585,15 +585,6 @@
     "m_array = np.arange(500, 20000, 1000)\n",
     "d_array = np.arange(5000, 20000, 1000)\n",
     "\n",
-    "# m_array = np.arange(20000, 21000, 1000)\n",
-    "# d_array = np.arange(10000, 15000, 1000)\n",
-    "# 3 - for loop over the array of distances in a for loop over the array of masses-----------------------------------------------------------------------\n",
-    "    #3.1 computes waveform \n",
-    "    #3.2 prepares waveform for psd estimate\n",
-    "    #3.3 estimates psd of waveform\n",
-    "    #3.4 calculates the snr estimate for that selected mass at that distance iteration\n",
-    "    #3.5 packages the snr vs distance vector into a 2d array of mass vs distance\n",
-    "    \n",
     "snr_row_m_column_d = np.zeros((np.size(m_array), np.size(d_array)), \n",
     "                              dtype=merged_noise_ts.dtype)\n",
     "\n",
